﻿- Add checks to remove any over-age students from schools


Version 1.6.1

- Compatibility with game version 1.14.
- Convert translation framework to CSV (for CrowdIn)


Version 1.6.0.3 hotfix

- Force JITter to not inline ResidentAI.UpdateWorkplace Prefix


Version 1.6.0.2 hotfix

- Fix calculation mode checkboxes sometimes showing incorrect settings when Vanilla settings are active
- Fix childhood slider year-to-age-unit rounding


Version 1.6.0.1 hotfix

- Fix university student progression speed when using age speeds above unity


Version 1.6

- MAJOR NEW FEATURE: realistic early life ageing and progress, from early childhood to young adult (optional, customizable)
- New early life ageing is matched to real-world values and stages and includes a pre-school stage of life (young children)
- Code cleanups and refactoring


Version 1.5.5

- Convert options panel generation to on-demand
- Increase age speed slider maximum to 340
- Adjust transport options panel layout to accomodate longer translation strings


Version 1.5.4

- Change treatment of single parent death: remove orphaned children when both parents die (instead of sparing parent from death)
- Add slow incremental check to BuildingManager Simulation step to check for and remove building residents with invalid flags preventing them from ageing


Version 1.5.3

- Add option to reduce debugging log output
- Adjust text layout in options panels
- Restructure datastore
- Code cleanups


Version 1.5.2

- Spare single parents from early death (at least until the kids move out), to help prevent orphan households
- Overhaul mod conflict checking and notification
- Improve update notifications (thanks, macsergey!)
- Overhaul Harmony error notification
- Overhaul logging


Version 1.5.1

- Adjust options panel layout to accomodate longer translation strings


Version 1.5

- Add transport choices configuration editing to options panel
- Add saveable transport choices for eco residential